--- a/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
+++ b/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
@@ -5,9 +5,12 @@
     <Copyright>HappyTravel.com</Copyright>
     <Authors>HappyTravel.com</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageVersion>1.0.3</PackageVersion>
+    <PackageVersion>1.0.4</PackageVersion>
     <NeutralLanguage>en</NeutralLanguage>
-    <Version>1.0.0</Version>
+    <Version>1.0.4</Version>
+    <Description>The logger writes JSON format entries into the stdout.</Description>
+    <AssemblyVersion>1.0.4.0</AssemblyVersion>
+    <FileVersion>1.0.4.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
