--- a/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
+++ b/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
@@ -5,16 +5,17 @@
     <Copyright>HappyTravel.com</Copyright>
     <Authors>HappyTravel.com</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageVersion>1.0.4</PackageVersion>
+    <PackageVersion>1.0.5</PackageVersion>
     <NeutralLanguage>en</NeutralLanguage>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
     <Description>The logger writes JSON format entries into the stdout.</Description>
-    <AssemblyVersion>1.0.4.0</AssemblyVersion>
-    <FileVersion>1.0.4.0</FileVersion>
+    <AssemblyVersion>1.0.5.0</AssemblyVersion>
+    <FileVersion>1.0.5.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
