--- a/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
+++ b/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <Copyright>HappyTravel.com</Copyright>
@@ -12,12 +11,13 @@
     <Version>1.0.13</Version>
     <Description>Logger for writing logs to the stdout in JSON format</Description>
     <PackageReleaseNotes>OpenTelemetry headers support added</PackageReleaseNotes>
-    <AssemblyVersion>1.0.15</AssemblyVersion>
-    <FileVersion>1.0.15</FileVersion>
+    <AssemblyVersion>1.0.16</AssemblyVersion>
+    <FileVersion>1.0.16</FileVersion>
     <PackageProjectUrl>https://github.com/happy-travel/stdout-logger</PackageProjectUrl>
     <RepositoryURL>https://github.com/happy-travel/stdout-logger</RepositoryURL>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageVersion>1.0.15</PackageVersion>    
+    <PackageVersion>1.0.16</PackageVersion>
+    <TargetFrameworks>netcoreapp3.1;netcoreapp5.0</TargetFrameworks>    
   </PropertyGroup>
 
   <ItemGroup>
