--- a/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
+++ b/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
@@ -10,11 +10,11 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <NeutralLanguage>en</NeutralLanguage>
     <Description>Logger for writing logs to the stdout in JSON format</Description>
-    <PackageReleaseNotes>Fixed ObjectDisposedException when trying to access disposed request headers</PackageReleaseNotes>
+    <PackageReleaseNotes>Moved scoped information to separate dictionary</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/happy-travel/stdout-logger</PackageProjectUrl>
     <RepositoryURL>https://github.com/happy-travel/stdout-logger</RepositoryURL>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>1.0.19</Version>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
