--- a/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
+++ b/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
@@ -16,6 +16,7 @@
     <Version>1.3.0</Version>
     <TargetFramework>net5.0</TargetFramework>
     <OutputType>Library</OutputType>
+    <IsPackable>True</IsPackable>
   </PropertyGroup>
 
 </Project>
