--- a/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
+++ b/HappyTravel.StdOutLogger/HappyTravel.StdOutLogger.csproj
@@ -4,16 +4,16 @@
     <LangVersion>9</LangVersion>
     <Nullable>enable</Nullable>
     <Copyright>HappyTravel.com</Copyright>
-    <Authors>Oleg Konovalov, Denis Nikolaev</Authors>
+    <Authors>Oleg Konovalov, Denis Nikolaev, Vadim Mingazhev</Authors>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <NeutralLanguage>en</NeutralLanguage>
     <Description>Logger for writing logs to the stdout in JSON format</Description>
-    <PackageReleaseNotes>Fixed error on duplicated keys in scopes</PackageReleaseNotes>
+    <PackageReleaseNotes>Added string collections support</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/happy-travel/stdout-logger</PackageProjectUrl>
     <RepositoryURL>https://github.com/happy-travel/stdout-logger</RepositoryURL>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>1.3.1</Version>
+    <Version>1.3.2</Version>
     <TargetFramework>net5.0</TargetFramework>
     <OutputType>Library</OutputType>
     <IsPackable>True</IsPackable>
